# agent-ops

./: OWNERS  README.md
demos/mlflow-openshell-tracing/: README.md  agent.py  pyproject.toml  sandbox-policy.yaml  verify-traces.py
demos/redbank-demo/: .env.example  .gitignore  Makefile  OWNERS  README.md  TESTING.md
demos/redbank-demo/banking-agent/: .dockerignore  Dockerfile  agentruntime.yaml  banking-agent.yaml  deploy.sh  pyproject.toml
demos/redbank-demo/banking-agent/src/banking_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
demos/redbank-demo/knowledge-agent/: .dockerignore  Dockerfile  agentruntime.yaml  deploy.sh  knowledge-agent.yaml  pyproject.toml
demos/redbank-demo/knowledge-agent/src/knowledge_agent/: __main__.py  agent.py  agent_executor.py
demos/redbank-demo/knowledge-agent/tests/: test_agent.py  test_agent_executor.py  test_main.py
demos/redbank-demo/langchain-pgvector/: requirements.txt
demos/redbank-demo/langchain-pgvector/notebook/: pgvector_query_notebook.ipynb
demos/redbank-demo/langchain-pgvector/pipeline/: pgvector_rag_pipeline.py  pgvector_rag_pipeline.yaml
demos/redbank-demo/langchain-pgvector/tests/: conftest.py  test_rls.py  test_schema.py  test_search_knowledge.py
demos/redbank-demo/mcp-server/: Dockerfile  agentruntime.yaml  deploy.sh  mcp-server.yaml  requirements.txt
demos/redbank-demo/mcp-server/redbank-mcp/: database_manager.py  logger.py  mcp_server.py
demos/redbank-demo/orchestrator-agent/: Dockerfile  README.md  agent.yaml  deploy.sh  main.py  pyproject.toml  values.yaml
demos/redbank-demo/orchestrator-agent/charts/agent/: values.yaml
demos/redbank-demo/orchestrator-agent/charts/agent/templates/: agentruntime.yaml  rbac.yaml  serviceaccount.yaml
demos/redbank-demo/orchestrator-agent/examples/: mock_agents.py
demos/redbank-demo/orchestrator-agent/scripts/: register-keycloak-redirect.sh
demos/redbank-demo/orchestrator-agent/src/redbank_orchestrator/: a2a_client.py  agent.py  discovery.py  k8s_discovery.py  server.py  tools.py  tracing.py
demos/redbank-demo/orchestrator-agent/tests/: test_k8s_discovery.py  test_tools.py
demos/redbank-demo/playground/: Dockerfile  agent.yaml  deploy.sh  main.py  pyproject.toml  server.py  values.yaml
demos/redbank-demo/playground/charts/agent/: values.yaml
demos/redbank-demo/playground/charts/agent/templates/: _helpers.tpl  deployment.yaml
demos/redbank-demo/playground/playground/templates/: index.html
demos/redbank-demo/playground/scripts/: register-keycloak-redirect.sh
demos/redbank-demo/postgres-db/: init-db.sh  init.sql  kustomization.yaml  postgres.yaml
demos/redbank-demo/scripts/: cleanup.sh  setup-keycloak.sh  test-knowledge-agent.sh  test-search-knowledge.sh
demos/redbank-demo/tests/: test_mcp_rls.py
guides/: getting-started-openshell-openshift.md  inference-routing-rhoai.md
