[project]
name = "mlflow-openshell-tracing"
version = "0.1.0"
description = "Demo: MLflow tracing for AI agents in OpenShell sandboxes on RHOAI"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "mlflow>=3.11.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
